--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -23,6 +23,7 @@ django-storages = "==1.14.2"
 djangorestframework = ">=3.14.0"
 djoser = ">=2.2.0"
 djangorestframework-simplejwt = ">=5.3.0"
+pillow = "*"
 
 [dev-packages]
 
