--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -24,6 +24,7 @@ djangorestframework = ">=3.14.0"
 djoser = ">=2.2.0"
 djangorestframework-simplejwt = ">=5.3.0"
 pillow = "*"
+rest-framework-simplejwt = "*"
 
 [dev-packages]
 
