--- a/backend/EnvisionBackend/requirements.txt
+++ b/backend/EnvisionBackend/requirements.txt
@@ -1,14 +1,18 @@
-Django==4.2.7
+Django==5.2.5
 djangorestframework==3.14.0
-django-cors-headers==4.3.1
-supabase==2.0.2
+djangorestframework-simplejwt==5.3.0
+python-dotenv==1.0.0
 python-decouple==3.8
-openai==1.3.7
-django-allauth==0.57.0
-psycopg2-binary==2.9.9
-dj_database_url==2.1.0
-python-dotenv==1.0.1
+requests==2.31.0
+gunicorn==21.2.0
+dj-database-url==2.1.0
+whitenoise==6.6.0
+djoser==2.2.0
+django-cors-headers==4.3.1
+langgraph==0.2.55
+langchain==0.3.8
+langchain-core==0.3.21
+langchain-community==0.3.8
+Pillow==10.0.1
 django-storages==1.14.2
-djangorestframework>=3.14.0
-djoser>=2.2.0
-djangorestframework-simplejwt>=5.3.0
+boto3==1.34.0
