--- a/backend/EnvisionBackend/requirements.txt
+++ b/backend/EnvisionBackend/requirements.txt
@@ -16,5 +16,5 @@ langchain-community==0.3.8
 Pillow==10.4.0
 django-storages==1.14.2
 boto3==1.34.0
-setuptools>=70.0
+setuptools<81
 psycopg2-binary~=2.9.9   
