--- a/backend/EnvisionBackend/requirements.txt
+++ b/backend/EnvisionBackend/requirements.txt
@@ -14,7 +14,5 @@ langchain==0.3.8
 langchain-core==0.3.21
 langchain-community==0.3.8
 Pillow==10.4.0
-django-storages==1.14.2
-boto3==1.34.0
-setuptools<81
-psycopg2-binary~=2.9.9   
+setuptools>=70.0
+psycopg2-binary~=2.9.9
