--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,5 +14,5 @@ langchain==0.3.8
 langchain-core==0.3.21
 langchain-community==0.3.8
 Pillow==10.4.0
-setuptools>=70.0
+Setuptools<81
 psycopg2-binary~=2.9.9
